<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/register_shimmerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_80">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_24"
            android:textColor="@color/statusColor"/>
    </com.facebook.shimmer.ShimmerFrameLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        app:layout_constraintTop_toBottomOf="@+id/register_shimmerlayout"
        android:layout_marginTop="@dimen/dp_40"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:theme="@style/TextInputLayoutTheme">
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="账号"
            android:digits="@string/account_digits"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        app:layout_constraintTop_toBottomOf="@id/register_account_layout"
        android:layout_marginTop="@dimen/dp_15"
        android:theme="@style/TextInputLayoutTheme">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:hint="密码"
            android:inputType="textPassword"
            android:maxLines="1"
            android:digits="@string/password_digits" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:enabled="false"
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/register_password_layout"
        android:layout_marginTop="@dimen/dp_40"
        android:textSize="@dimen/sp_16"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:background="@drawable/gray_circle_background"/>
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="还没有账号？去注册"
        app:layout_constraintTop_toBottomOf="@id/tv_login"
        android:layout_marginTop="@dimen/dp_12"
        android:textSize="@dimen/dp_14"
        app:layout_constraintRight_toRightOf="@id/tv_login"
        android:textColor="@color/statusColor"/>

</android.support.constraint.ConstraintLayout>